Added local selenium grid

--- a/src/main/java/gabriel/selenium/ideas/utilities/selenium.properties
+++ b/src/main/java/gabriel/selenium/ideas/utilities/selenium.properties
@@ -26,3 +26,4 @@ browser=edge
 #platform - we will be able to override properties such as URL based on env type
 #production, uat, it, dev
 platform=uat
+grid=http://192.168.8.101:4444/wd/hub
